--- a/index.html
+++ b/index.html
@@ -57,7 +57,93 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 </head>
 <body class="tc-body">
 <!--~~ Raw markup for the top of the body section ~~-->
-
+<div class="tc-remove-when-wiki-loaded">
+<style scoped>.tc-splash-text {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 16px;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+	margin: 20px auto 0;
+	width: 200px;
+	text-align: center;
+	color: #657b83;
+	fill: #657b83;
+}html body.tc-body {
+  background: #eee8d5;
+}
+.line-wrapper {
+  width: 100%;
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.line {
+  width: 50px;
+  height: 1px;
+  background: #93a1a1;
+  -webkit-animation: line 2s infinite; 
+  -moz-animation: line 2s infinite; 
+  -o-animation: line 2s infinite; 
+  animation: line 2s infinite; 
+}
+@-webkit-keyframes line {
+  0%   { width: 10px; }
+  50% { width: 200px; }
+  100% { width: 10px; }
+}
+@keyframes line {
+  0%   { width: 10px; }
+  50% { width: 200px; }
+  100% { width: 10px; }
+}
+.linetwo {
+  width: 50px;
+  height: 1px;
+  background: #93a1a1;
+  -webkit-animation: linetwo 2s infinite; 
+  -moz-animation: linetwo 2s infinite; 
+  -o-animation: linetwo 2s infinite; 
+  animation: linetwo 2s infinite; 
+  margin: 5px 0;
+}
+@-webkit-keyframes linetwo {
+  0%   { width: 5px; }
+  70% { width: 180px; }
+  100% { width: 5px; }
+}
+@keyframes linetwo {
+  0%   { width: 5px; }
+  70% { width: 180px; }
+  100% { width: 5px; }
+}
+.linethree {
+  width: 50px;
+  height: 1px;
+  background: #93a1a1;
+  -webkit-animation: linethree 2s infinite; 
+  -moz-animation: linethree 2s infinite; 
+  -o-animation: linethree 2s infinite; 
+  animation: linethree 2s infinite; 
+  margin: linethree 0;
+}
+@-webkit-keyframes linethree {
+  0%   { width: 0; }
+ 80% { width: 160px; }
+  100% { width: 0; }
+}
+@keyframes linethree {
+  0%   { width: 0; }
+  80% { width: 160px; }
+  100% { width: 0; }
+}
+</style><div class="line-wrapper">
+<div class="tc-splash-text">TiddlyWiki</div>
+<div class="line"></div>
+<div class="linetwo"></div>
+<div class="linethree"></div>
+</div></div>
 <!--~~ Static styles ~~-->
 <div id="styleArea">
 <style data-tiddler-title="$:/boot/boot.css" data-tiddler-type="text/css" type="text/css">/*
@@ -205,6 +291,8 @@ Error message and password prompt
 
 <li>$:/config/Plugins/Disabled/$:/themes/jd/Mono</li>
 
+<li>$:/config/Plugins/Disabled/$:/themes/tiddlywiki/snowwhite</li>
+
 <li>$:/config/Plugins/Disabled/$:/themes/tiddlywiki/vanilla</li>
 
 <li>$:/config/RelinkOnRename</li>
@@ -275,6 +363,8 @@ Error message and password prompt
 
 <li>$:/sk/WhiteList</li>
 
+<li>$:/SplashScreen</li>
+
 <li>$:/state/plugin-info--2135486722-$:/plugins/tobibeer/preview---1090399154</li>
 
 <li>$:/state/plugin-info--270617185-$:/themes/jd/Mono</li>
@@ -310,6 +400,8 @@ Error message and password prompt
 <li>$:/state/tab-1749438307</li>
 
 <li>$:/state/tab-2065006209</li>
+
+<li>$:/state/tab-738187504</li>
 
 <li>$:/state/tab/moresidebar-1645249547</li>
 
@@ -546,6 +638,8 @@ Error message and password prompt
 <li>$:/theme</li>
 
 <li>$:/themes/jd/Mono</li>
+
+<li>$:/themes/jd/Mono/Database</li>
 
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
@@ -1087,8 +1181,11 @@ placeholder=&quot;$placeholder$&quot;/&gt;
 <div created="20200728015919374" creator="debby" modified="20200728020511670" modifier="debby" title="$:/config/Plugins/Disabled/$:/themes/jd/Mono">
 <pre>no</pre>
 </div>
-<div created="20200728015926979" creator="debby" modified="20200728020308572" modifier="debby" title="$:/config/Plugins/Disabled/$:/themes/tiddlywiki/vanilla">
-<pre>no</pre>
+<div created="20200728022017838" creator="debby" modified="20200728022017838" modifier="debby" title="$:/config/Plugins/Disabled/$:/themes/tiddlywiki/snowwhite">
+<pre>yes</pre>
+</div>
+<div created="20200728015926979" creator="debby" modified="20200728022020474" modifier="debby" title="$:/config/Plugins/Disabled/$:/themes/tiddlywiki/vanilla">
+<pre>yes</pre>
 </div>
 <div created="20200106214031452" modified="20200304195600676" tags="tb" title="$:/config/RelinkOnRename">
 <pre>yes</pre>
@@ -10518,8 +10615,8 @@ placeholder=&quot;$placeholder$&quot;/&gt;
 &lt;/$button&gt;
 &lt;/$navigator&gt;</pre>
 </div>
-<div created="20190202142805411" creator="jd" modified="20200728020838985" modifier="debby" title="$:/palette">
-<pre>$:/palettes/TiddlyBlink</pre>
+<div created="20190202142805411" creator="jd" modified="20200728015544443" modifier="debby" title="$:/palette">
+<pre>$:/palettes/SolarFlare</pre>
 </div>
 <div created="20200222183545341" description="the opposite of TiddlyWiki's usual color scheme" modified="20200304200158934" name="TiddlyBlink" tags="tb $:/tags/Palette" title="$:/palettes/TiddlyBlink" type="application/x-tiddler-dictionary">
 <pre>alert-background: #ffe476
@@ -12348,17 +12445,116 @@ exports.context = contextWidget;
 <div caption="Words to never consider as CamelCase links" created="20150210172146298" creator="Stephen" description="Words that should never be considered as CamelCase wikiwords. Separate the individual words with commas (,)." modified="20200304200314967" modifier="Stephen" tags="tb ske" title="$:/sk/WhiteList">
 <pre>LeDoux,McCloud,McDonald,TiddlyWiki,TiddlyWiki5,CamelCase,DuBay,McGraw,McCullough,LeGrange,NaCl,MeOH,EtOH,PiB,TiddlyTools,ResetFind,WikiText,WinBuilder,WinPE,ProgramData,TiddlyFox,GuillermoMartin,AndrewFraser,RochesterMNwalkers,DEdwardsCalgary,WalkaboutMM,HarveyG,McCoy,GeForce,SideBar,AirBnB,PayPal,LeBron,JavaScript,ExpressJet,CutePDF,McClouds,McElroy,McGovern,TableHelper,ShadowTiddler,WikiWords</pre>
 </div>
+<div created="20200728021803251" creator="debby" modified="20200728021803253" modifier="debby" tags="$:/tags/RawMarkupWikified/TopBody" title="$:/SplashScreen">
+<pre>\import [[$:/core/ui/PageMacros]] [all[shadows+tiddlers]tag[$:/tags/Macro]!has[draft.of]]
+\rules only filteredtranscludeinline transcludeinline macrocallinline
+&lt;div class=&quot;tc-remove-when-wiki-loaded&quot;&gt;
+&lt;style scoped&gt;
+
+.tc-splash-text {
+    font-family: -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, Helvetica, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;;
+    font-size: 16px;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+	margin: 20px auto 0;
+	width: 200px;
+	text-align: center;
+	color: &lt;&lt;colour foreground&gt;&gt;;
+	fill: &lt;&lt;colour foreground&gt;&gt;;
+}
+
+html body.tc-body {
+  background: &lt;&lt;colour page-background&gt;&gt;;
+}
+.line-wrapper {
+  width: 100%;
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.line {
+  width: 50px;
+  height: 1px;
+  background: &lt;&lt;colour muted-foreground&gt;&gt;;
+  -webkit-animation: line 2s infinite; 
+  -moz-animation: line 2s infinite; 
+  -o-animation: line 2s infinite; 
+  animation: line 2s infinite; 
+}
+@-webkit-keyframes line {
+  0%   { width: 10px; }
+  50% { width: 200px; }
+  100% { width: 10px; }
+}
+@keyframes line {
+  0%   { width: 10px; }
+  50% { width: 200px; }
+  100% { width: 10px; }
+}
+.linetwo {
+  width: 50px;
+  height: 1px;
+  background: &lt;&lt;colour muted-foreground&gt;&gt;;
+  -webkit-animation: linetwo 2s infinite; 
+  -moz-animation: linetwo 2s infinite; 
+  -o-animation: linetwo 2s infinite; 
+  animation: linetwo 2s infinite; 
+  margin: 5px 0;
+}
+@-webkit-keyframes linetwo {
+  0%   { width: 5px; }
+  70% { width: 180px; }
+  100% { width: 5px; }
+}
+@keyframes linetwo {
+  0%   { width: 5px; }
+  70% { width: 180px; }
+  100% { width: 5px; }
+}
+.linethree {
+  width: 50px;
+  height: 1px;
+  background: &lt;&lt;colour muted-foreground&gt;&gt;;
+  -webkit-animation: linethree 2s infinite; 
+  -moz-animation: linethree 2s infinite; 
+  -o-animation: linethree 2s infinite; 
+  animation: linethree 2s infinite; 
+  margin: linethree 0;
+}
+@-webkit-keyframes linethree {
+  0%   { width: 0; }
+ 80% { width: 160px; }
+  100% { width: 0; }
+}
+@keyframes linethree {
+  0%   { width: 0; }
+  80% { width: 160px; }
+  100% { width: 0; }
+}
+&lt;/style&gt;
+
+&lt;div class=&quot;line-wrapper&quot;&gt;
+&lt;div class=&quot;tc-splash-text&quot;&gt;{{$:/SiteTitle}}&lt;/div&gt;
+&lt;div class=&quot;line&quot;&gt;&lt;/div&gt;
+&lt;div class=&quot;linetwo&quot;&gt;&lt;/div&gt;
+&lt;div class=&quot;linethree&quot;&gt;&lt;/div&gt;
+&lt;/div&gt;
+
+&lt;/div&gt;</pre>
+</div>
 <div created="20200527084422330" modified="20200527084422330" title="$:/state/plugin-info--2135486722-$:/plugins/tobibeer/preview---1090399154">
 <pre>config</pre>
 </div>
 <div created="20200728015904036" creator="debby" modified="20200728015904036" modifier="debby" title="$:/state/plugin-info--270617185-$:/themes/jd/Mono">
 <pre>yes</pre>
 </div>
-<div created="20200722092008809" creator="debby" modified="20200722092028508" modifier="debby" title="$:/state/plugin-info--270617185-$:/themes/tiddlywiki/snowwhite">
-<pre>no</pre>
+<div created="20200722092008809" creator="debby" modified="20200728022011520" modifier="debby" title="$:/state/plugin-info--270617185-$:/themes/tiddlywiki/snowwhite">
+<pre>yes</pre>
 </div>
-<div created="20200722092012898" creator="debby" modified="20200722092017895" modifier="debby" title="$:/state/plugin-info--270617185-$:/themes/tiddlywiki/vanilla">
-<pre>no</pre>
+<div created="20200722092012898" creator="debby" modified="20200728022019670" modifier="debby" title="$:/state/plugin-info--270617185-$:/themes/tiddlywiki/vanilla">
+<pre>yes</pre>
 </div>
 <div created="20200722091945875" creator="debby" modified="20200722092000843" modifier="debby" title="$:/state/plugin-info--896887961-$:/plugins/tiddlywiki/highlight">
 <pre>no</pre>
@@ -12384,8 +12580,8 @@ exports.context = contextWidget;
 <div created="20200618095532887" creator="debby" modified="20200722135218846" modifier="debby" title="$:/state/tab--152518593">
 <pre>$:/core/ui/MoreSideBar/Plugins/Theme</pre>
 </div>
-<div created="20200618012853212" creator="debby" modified="20200728020834937" modifier="debby" title="$:/state/tab--1963855381">
-<pre>$:/core/ui/ControlPanel/Palette</pre>
+<div created="20200618012853212" creator="debby" modified="20200728021755532" modifier="debby" title="$:/state/tab--1963855381">
+<pre>$:/themes/jd/Mono/Config</pre>
 </div>
 <div created="20200527074355500" creator="debby" modified="20200722135107633" modifier="debby" title="$:/state/tab--2112689675">
 <pre>$:/core/ui/ControlPanel/Basics</pre>
@@ -12396,11 +12592,14 @@ exports.context = contextWidget;
 <div created="20200527074400500" creator="debby" modified="20200722135101714" modifier="debby" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/TiddlerFields</pre>
 </div>
-<div created="20200527074318200" creator="debby" modified="20200728020514634" modifier="debby" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Appearance</pre>
+<div created="20200527074318200" creator="debby" modified="20200728022008003" modifier="debby" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Plugins</pre>
 </div>
 <div created="20200618012538037" creator="debby" modified="20200722134041093" modifier="debby" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/General</pre>
+</div>
+<div created="20200728021958780" creator="debby" modified="20200728022004275" modifier="debby" title="$:/state/tab-738187504">
+<pre>$:/themes/jd/Mono/Config/SidebarSegments</pre>
 </div>
 <div created="20200618095525979" creator="debby" modified="20200722135209921" modifier="debby" title="$:/state/tab/moresidebar-1645249547">
 <pre>$:/core/ui/MoreSideBar/Plugins</pre>
@@ -12414,7 +12613,7 @@ exports.context = contextWidget;
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200728020819708" creator="debby" list="Welcome!" modified="20200728020819708" modifier="debby" title="$:/StoryList">
+<div created="20200728021741226" creator="debby" list="$:/ControlPanel" modified="20200728021741226" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -13455,8 +13654,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200722081145041" creator="debby" modified="20200722081149777" modifier="debby" title="$:/temp/tobibeer/preview-2-tiddler">
 <pre>李元佳</pre>
 </div>
-<div created="20190202142800922" creator="jd" modified="20200728020827061" modifier="debby" title="$:/theme">
-<pre>$:/themes/tiddlywiki/snowwhite</pre>
+<div created="20190202142800922" creator="jd" modified="20200728021751113" modifier="debby" title="$:/theme">
+<pre>$:/themes/jd/Mono</pre>
 </div>
 <div author="JD" core-version="&gt;=5.1.19" created="20190202102252527" creator="jd" dependents="$:/themes/tiddlywiki/vanilla" description="For writing long texts" list="contents" modified="20190203163019606" modifier="jd" name="Mono" plugin-type="theme" source="http://j.d.mono.tiddlyspot.com" title="$:/themes/jd/Mono" type="application/json" version="1.0.32">
 <pre>{
@@ -13693,6 +13892,20 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
             &quot;caption&quot;: &quot;Vanilla tweaks&quot;
         }
     }
+}</pre>
+</div>
+<div created="20190202114537700" creator="jd" list="$:/core/ui/Buttons/home $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/save-wiki $:/core/ui/TopBar/menu $:/themes/jd/Mono/Buttons/searchbar $:/themes/jd/Mono/Buttons/font-scroller" modified="20200728021823103" modifier="debby" tags="" title="$:/themes/jd/Mono/Database" type="application/json">
+<pre>{
+    &quot;grid-sticky-header-background&quot;: &quot;&lt;&lt;colour page-background&gt;&gt;&quot;,
+    &quot;grid-item-background&quot;: &quot;&lt;&lt;colour background&gt;&gt;&quot;,
+    &quot;grid-item-border&quot;: &quot;&lt;&lt;colour tiddler-border&gt;&gt;&quot;,
+    &quot;header-background&quot;: &quot;&lt;&lt;colour page-background&gt;&gt;&quot;,
+    &quot;header-position-mobile-no-searchbar&quot;: &quot;calc(2px + 2.25em)&quot;,
+    &quot;header-position-mobile-yes-searchbar&quot;: &quot;calc(4px + 3em + 6px + {{$:/themes/tiddlywiki/vanilla/metrics/fontsize}} + .25em)&quot;,
+    &quot;header-position-desktop&quot;: &quot;calc(56px + .25em)&quot;,
+    &quot;day-palette&quot;: &quot;$:/themes/jd/Mono/Palette/SpartanDay&quot;,
+    &quot;night-palette&quot;: &quot;$:/themes/jd/Mono/Palette/SpartanNight&quot;,
+    &quot;button-fontscroller&quot;: &quot;show&quot;
 }</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.22">
