--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 	margin: 20px auto 0;
 	width: 200px;
 	text-align: center;
-	color: #657b83;
-	fill: #657b83;
+	color: #333333;
+	fill: #333333;
 }html body.tc-body {
-  background: #eee8d5;
+  background: #fff;
 }
 .line-wrapper {
   width: 100%;
@@ -82,7 +82,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 .line {
   width: 50px;
   height: 1px;
-  background: #93a1a1;
+  background: #bbb;
   -webkit-animation: line 2s infinite; 
   -moz-animation: line 2s infinite; 
   -o-animation: line 2s infinite; 
@@ -101,7 +101,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 .linetwo {
   width: 50px;
   height: 1px;
-  background: #93a1a1;
+  background: #bbb;
   -webkit-animation: linetwo 2s infinite; 
   -moz-animation: linetwo 2s infinite; 
   -o-animation: linetwo 2s infinite; 
@@ -121,7 +121,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 .linethree {
   width: 50px;
   height: 1px;
-  background: #93a1a1;
+  background: #bbb;
   -webkit-animation: linethree 2s infinite; 
   -moz-animation: linethree 2s infinite; 
   -o-animation: linethree 2s infinite; 
@@ -284,6 +284,8 @@ Error message and password prompt
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/home</li>
 
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/new-tiddler</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/refresh</li>
 
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/save-wiki</li>
 
@@ -676,8 +678,6 @@ Error message and password prompt
 <li>$:/view</li>
 
 <li>2020-06-18</li>
-
-<li>2020-07-22</li>
 
 <li>Bob Dylan - Rough and Rowdy Ways</li>
 
@@ -1189,23 +1189,26 @@ placeholder=&quot;$placeholder$&quot;/&gt;
 <div created="20200728023031479" creator="debby" modified="20200728023031479" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/.giffmex/buttons/newnote-datetime">
 <pre>hide</pre>
 </div>
-<div created="20200728023032808" creator="debby" modified="20200728023032808" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/control-panel">
-<pre>hide</pre>
+<div created="20200728023032808" creator="debby" modified="20200923032952470" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/control-panel">
+<pre>show</pre>
 </div>
 <div created="20200722133855585" creator="debby" modified="20200722134447853" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/encryption">
 <pre>hide</pre>
 </div>
-<div created="20200722134505572" creator="debby" modified="20200728023032170" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/export-page">
+<div created="20200722134505572" creator="debby" modified="20200923032949059" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/export-page">
+<pre>show</pre>
+</div>
+<div created="20200722133819954" creator="debby" modified="20200923032940005" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/home">
+<pre>show</pre>
+</div>
+<div created="20200728023030706" creator="debby" modified="20200923032943452" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/new-tiddler">
+<pre>show</pre>
+</div>
+<div created="20200923033107533" creator="debby" modified="20200923033109765" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/refresh">
 <pre>hide</pre>
 </div>
-<div created="20200722133819954" creator="debby" modified="20200728023030002" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/home">
-<pre>hide</pre>
-</div>
-<div created="20200728023030706" creator="debby" modified="20200728023030706" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/new-tiddler">
-<pre>hide</pre>
-</div>
-<div created="20200728023035388" creator="debby" modified="20200728023035388" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/save-wiki">
-<pre>hide</pre>
+<div created="20200728023035388" creator="debby" modified="20200923033110261" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/save-wiki">
+<pre>show</pre>
 </div>
 <div created="20200722133842427" creator="debby" modified="20200722133846530" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/storyview">
 <pre>hide</pre>
@@ -1213,8 +1216,8 @@ placeholder=&quot;$placeholder$&quot;/&gt;
 <div created="20200722134511888" creator="debby" modified="20200722134529333" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/theme">
 <pre>hide</pre>
 </div>
-<div created="20200728023031096" creator="debby" modified="20200728023031096" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/plugins/tiddlywiki/markdown/new-markdown-button">
-<pre>hide</pre>
+<div created="20200728023031096" creator="debby" modified="20200923032943979" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/plugins/tiddlywiki/markdown/new-markdown-button">
+<pre>show</pre>
 </div>
 <div created="20200728023041378" creator="debby" modified="20200728023041379" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/themes/jd/Mono/Buttons/font-scroller">
 <pre>hide</pre>
@@ -10662,8 +10665,8 @@ placeholder=&quot;$placeholder$&quot;/&gt;
 &lt;/$button&gt;
 &lt;/$navigator&gt;</pre>
 </div>
-<div created="20190202142805411" creator="jd" modified="20200728015544443" modifier="debby" title="$:/palette">
-<pre>$:/palettes/SolarFlare</pre>
+<div created="20190202142805411" creator="jd" modified="20200923033020786" modifier="debby" title="$:/palette">
+<pre>$:/palettes/TiddlyBlink</pre>
 </div>
 <div created="20200222183545341" description="the opposite of TiddlyWiki's usual color scheme" modified="20200304200158934" name="TiddlyBlink" tags="tb $:/tags/Palette" title="$:/palettes/TiddlyBlink" type="application/x-tiddler-dictionary">
 <pre>alert-background: #ffe476
@@ -12639,8 +12642,8 @@ html body.tc-body {
 <div created="20200618095532887" creator="debby" modified="20200722135218846" modifier="debby" title="$:/state/tab--152518593">
 <pre>$:/core/ui/MoreSideBar/Plugins/Theme</pre>
 </div>
-<div created="20200618012853212" creator="debby" modified="20200728032830227" modifier="debby" title="$:/state/tab--1963855381">
-<pre>$:/themes/jd/Mono/Config</pre>
+<div created="20200618012853212" creator="debby" modified="20200923033137026" modifier="debby" title="$:/state/tab--1963855381">
+<pre>$:/core/ui/ControlPanel/Theme</pre>
 </div>
 <div created="20200527074355500" creator="debby" modified="20200728023101781" modifier="debby" title="$:/state/tab--2112689675">
 <pre>$:/core/ui/ControlPanel/Basics</pre>
@@ -12651,8 +12654,8 @@ html body.tc-body {
 <div created="20200527074400500" creator="debby" modified="20200728023100133" modifier="debby" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/EditorTypes</pre>
 </div>
-<div created="20200527074318200" creator="debby" modified="20200923015038027" modifier="debby" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Plugins</pre>
+<div created="20200527074318200" creator="debby" modified="20200923033149270" modifier="debby" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20200618012538037" creator="debby" modified="20200923015017583" modifier="debby" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
@@ -12672,7 +12675,7 @@ html body.tc-body {
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div list="Welcome!" title="$:/StoryList">
+<div created="20200923033158866" creator="debby" list="$:/core/ui/SideBar/Recent Welcome! [[From collector to creator]]" modified="20200923033210166" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -13707,14 +13710,14 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200923015418901" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>.hideList</pre>
+<div created="20200618014049220" creator="debby" modified="20200923033210638" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>2020-07-22</pre>
 </div>
 <div created="20200722081145041" creator="debby" modified="20200722081149777" modifier="debby" title="$:/temp/tobibeer/preview-2-tiddler">
 <pre>李元佳</pre>
 </div>
-<div created="20190202142800922" creator="jd" modified="20200728021751113" modifier="debby" title="$:/theme">
-<pre>$:/themes/jd/Mono</pre>
+<div created="20190202142800922" creator="jd" modified="20200923033147375" modifier="debby" title="$:/theme">
+<pre>$:/themes/tiddlywiki/snowwhite</pre>
 </div>
 <div author="JD" core-version="&gt;=5.1.19" created="20190202102252527" creator="jd" dependents="$:/themes/tiddlywiki/vanilla" description="For writing long texts" list="contents" modified="20190203163019606" modifier="jd" name="Mono" plugin-type="theme" source="http://j.d.mono.tiddlyspot.com" title="$:/themes/jd/Mono" type="application/json" version="1.0.32">
 <pre>{
@@ -14088,7 +14091,7 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200127172539001" creator="debby" modified="20200722134954236" modifier="debby" tags="tb" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
 <pre>fixed-fluid</pre>
 </div>
-<div created="20200127165334843" creator="debby" modified="20200722133734451" modifier="debby" tags="tb" title="$:/view">
+<div created="20200127165334843" creator="debby" modified="20200923033134555" modifier="debby" tags="tb" title="$:/view">
 <pre>horizontal</pre>
 </div>
 <div created="20200618095738085" creator="debby" modified="20200618101220430" modifier="debby" tags="Journal" title="2020-06-18">
@@ -14101,13 +14104,6 @@ Saving with GitHub is iffy, and sometimes this site/page renders strangely. Most
 Since what I'm writing here is technically public, I need to write in general terms instead of referring to specific examples. This will be challenging.
 
 In order to follow the principle of never creating notes in isolation, here's a link to [[From collector to creator]]. </pre>
-</div>
-<div created="20200722093631618" creator="debby" modified="20200722134420602" modifier="debby" tags="Journal" title="2020-07-22">
-<pre>After giving up TiddkyWiki for a while, I'm back again. Once the page has been set up, it seems relatively easy to update this site.
-
-I'm still getting used to the idea of hosting a public site of personal notes. Writing for a public audience doesn't come to me naturally, and I'm not someone who can easily go into confessional mode or can offer lots of insight for people who listen to me speak.
-
-Due to the coronavirus pandemic, I've been stuck at the WFH situation. I could really use this space to practice my writing and speaking skills even though I'm certain no one visits here except myself.</pre>
 </div>
 <div created="20200618131628910" creator="debby" modified="20200618132034647" modifier="debby" tags="[[Classic rock]]" title="Bob Dylan - Rough and Rowdy Ways">
 <pre>Bob Dylan’s albums has not intrigued me for a long time. Perhaps they never did because I don’t like how his work is overhyped here in Taiwan. However, this [[review|https://www.thelineofbestfit.com/reviews/albums/bob-dylan-remains-an-immeasurable-and-inimitable-force]] from //The Line of Best Fit// is very interesting. I also like the song titles a lot. Maybe I’ll give it a try when it’s available on Spotify.</pre>
